# bassical

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json
docs/: DESIGN.md  PRD.md  PRODUCT.md  SPRINT_PLAN.md  user-stories.md
docs/mockups/: 01-library.html  02-calibrator.html  03-tab-editor.html  04-play-along.html  05-timing-points.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: buffer_playback.rs  cache.rs  decoder.rs  engine.rs  mod.rs
src-tauri/src/calibration/: mod.rs
src-tauri/src/commands/: audio.rs  calibration.rs  library.rs  mod.rs  tabs.rs
src-tauri/src/models/: mod.rs  song.rs  tab.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/persistence/: storage.rs
src/components/Audio/: PlaybackControls.tsx  WaveformView.tsx  index.tsx
src/components/Layout/: ActiveTasksIndicator.tsx  PlayerBar.tsx  index.tsx
src/lib/: audio.ts  dialog.ts  library.ts  useAudioPlayback.ts  usePracticePlayback.ts
src/lib/store/: index.ts  libraryStore.ts  sessionStore.ts  tabStore.ts
src/lib/types/: index.ts  ipc.ts
src/views/: AudioView.tsx  LibraryView.tsx
