[package]
name = "bassical"
version = "0.1.0"
description = "Bass learning and tab studio"
authors = ["Vor7ex"]
edition = "2021"

[lib]
name = "bassical_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
