[package]
name = "bassical"
version = "0.1.0"
description = "Bass learning and tab studio"
authors = ["Vor7ex"]
edition = "2021"

[lib]
name = "bassical_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
cpal = "0.15"
symphonia = { version = "0.6", features = ["mp3", "wav", "flac", "ogg"] }
ringbuf = "0.4"
soundtouch = "0.5.4"
moka = { version = "0.12", features = ["sync"] }
